added note on loudness, and a few more translations to lithuanian.

--- a/home.html
+++ b/home.html
@@ -151,7 +151,7 @@
 
   <div id="stage3" class="hidden">
     <h2>Bandomasis testas</h2>
-    <p>Klausykitės bandomojo testo muzikos pavyzdžio ir tuo pačiu metu reguliuokite slankiklį pagal jaučiamą įtampą.</p>
+    <p>Klausykitės bandomojo testo muzikos pavyzdžio ir tuo pačiu metu reguliuokite slankiklį pagal jaučiamą įtampą. Kai kurios bandomojo testo muzikos pavyzdžio dalys gali būti garsesnės</p>
     <audio id="pilotAudio" controls>
       <source src="music.pilot.mp3" type="audio/mpeg">
     </audio>
@@ -177,8 +177,8 @@
     </audio>
     <div class="mt-3">
       <div class="slider-labels">
-        <span>Low</span>
-        <span>High</span>
+        <span>žemiausia įtampa.</span>
+        <span>aukščiausia įtampa.</span>
       </div>
       <input type="range" id="mainSlider" class="form-range" min="0" max="1" step="0.01">
     </div>
