add change in description and in readme

--- a/home.html
+++ b/home.html
@@ -50,15 +50,40 @@
 
     <h4>Aprašymas</h4>
 <p>Sveiki,</p>
-<p>esu Aušrinė Butvydaitė, muzikos tyrimų bakalauro trečio kurso studentė Lietuvos muzikos ir teatro akademijoje. Šiuo metu rašau kursinį darbą „Harmoninės įtampos fenomenas: sąvokos kontūrai skirtinguose teoriniuose modeliuose“ ir atlieku akustinį eksperimentą. Jo tikslas – išsiaiškinti kaip klausytojai suvokia įtampą pateiktoje muzikinio kūrinio ištraukoje (muzikinės ištraukos trukmė 1 min.). Prieš tai bus pateiktas bandomasis testas.</p>
-<p>Pradžioje Jums bus pateiktas klausimynas su 10 uždarų klausimų (klausimyno pildymo laikas maždaug 2-3 min.). Po šio klausimyno Jūs būsite perkelta/s į bandomąjį akustinį eksperimentą.</p>
-<p>Jūsų duomenys yra anoniminiai ir viešai neskelbiami. Jūsų dalyvavimas yra vertingas ir padės tobulinti mokslinio tyrimo rezultatus.</p>
+<p>
+  esu Aušrinė Butvydaitė, muzikos tyrimų bakalauro trečio kurso studentė Lietuvos muzikos ir teatro akademijoje. Šiuo metu rašau kursinį darbą „Harmoninės įtampos fenomenas: sąvokos kontūrai skirtinguose teoriniuose modeliuose“ ir atlieku akustinį eksperimentą. Jo tikslas – išsiaiškinti kaip klausytojai suvokia įtampą pateiktoje muzikinio kūrinio ištraukoje (muzikinės ištraukos trukmė 1 min.). Prieš tai bus pateiktas bandomasis testas.
+</p>
+<p>
+  Harmoninės įtampos terminas reiškia, jog akordai, kurie skamba maloniai ir darniai, turi
+mažą harmoninę įtampą. Akordai, kurie skamba nemaloniai, šiurkščiai ar nedarniai, turi
+didelę harmoninę įtampą.
+</p>
+<p>
+Pradžioje Jums bus pateiktas klausimynas su 11 uždarų klausimų (klausimyno pildymo laikas maždaug 2-3 min.). Po šio klausimyno Jūs būsite perkelta/s į bandomąjį akustinį eksperimentą.
+</p>
+<p>
+Jūsų duomenys yra anoniminiai ir viešai neskelbiami. Jūsų dalyvavimas yra vertingas ir padės tobulinti mokslinio tyrimo rezultatus.</p>
+
 <h4>Instrukcija akustiniam eksperimentui</h4>
-<p>Pradžioje Jums bus pateiktas bandomasis testas. Jame galite išbandyti kaip veikia pats akustinis eksperimentas.</p>
-<p>Atsidarę langą matysite muzikinio kūrinio ištrauką, kurią galite paleisti, reguliuoti jos garsumą. Apačioje matysite liniją su mėlynu apskritimu. Skambant muzikai, slinkite mėlyną apskritimą ant linijos į kairę arba į dešinę pusę. Kairė pusė reiškia „mažiausia įtampa“, o dešinė pusė – „didžiausia įtampa“. Jūsų tikslas – realiu laiku reaguoti į skambančią muziką ir slankioti mėlyną apskritimą pagal juntamą muzikinę įtampą. Bandomojo testo metu jums bus pateiktos 3 akordų sekos skirtingose tonacijose su baltojo triukšmo intarpais.</p>
-<p>Kai baigsite bandomąjį testą, galėsite pereiti į antrąjį langą, kuriame bus akustiniam eksperimentui skirtas kūrinys (jo trukmė apie 1 min.). Kai baigsite užduotį, Jūsų lauks paskutinis klausimas: ar esate girdėjęs/-usi šią muzikinę ištrauką anksčiau? Jei ne, palikite atsakymą tuščią.</p>
-<p>Baigę visas užduotis spauskite „Finish“, kad išsisaugotų Jūsų atsakymai ir įtampos vertinimai. Jei kiltų klausimų, rašykite: ausrine.butvydaite@stud.lmta.lt.</p>
-<p>Ačiū už Jūsų laiką!</p>
+<p>
+Pradžioje Jums bus pateiktas bandomasis testas. Jame galite išbandyti kaip veikia pats akustinis eksperimentas.
+</p>
+<p>
+Atsidarę langą matysite muzikinio kūrinio ištrauką, kurią galite paleisti, reguliuoti jos garsumą. Apačioje matysite liniją su mėlynu apskritimu. Skambant muzikai, slinkite mėlyną apskritimą ant linijos į kairę arba į dešinę pusę. Kairė pusė reiškia „mažiausia įtampa“, o dešinė pusė – „didžiausia įtampa“. Jūsų tikslas – realiu laiku reaguoti į skambančią muziką ir slankioti mėlyną apskritimą pagal juntamą muzikinę įtampą. Bandomojo testo metu jums bus pateiktos 3 akordų sekos skirtingose tonacijose su baltojo triukšmo intarpais.
+</p>
+<p>
+Kai baigsite bandomąjį testą, galėsite pereiti į antrąjį langą, kuriame bus virtualiam
+akustiniam eksperimentui skirtas kūrinys originaliu pavidalu (jo trukmė apie 1 min.).
+Pereinant į kitą langą, tas pats kūrinys bus pateiktas harmoniškai redukuotu pavidalu (aiškiai
+girdėsis akordai).
+</p>
+<p>
+Baigę visas užduotis spauskite „Finish“, kad išsisaugotų Jūsų atsakymai ir įtampos vertinimai. Jei kiltų klausimų, rašykite: ausrine.butvydaite@stud.lmta.lt.
+</p>
+<p>
+Ačiū už Jūsų laiką!
+</p>
+
 <div class="button-group">
       <button id="toQuestionnaire" class="btn btn-primary">Pereiti į klausimyną</button>
     </div>
@@ -180,8 +205,8 @@
 
   <!-- STAGE 4 -->
   <div id="stage4" class="hidden">
-    <h2>Pagrindinis testas</h2>
-    <p>Atidžiai klausykitės ir reguliuokite slankiklį taip, kad jis atspindėtų jaučiamą muzikinę įtampą.</p>
+    <h2>Pagrindinis testas (originali kūrinio ištrauka)</h2>
+    <p>Atidžiai klausykitės ir reguliuokite slankiklį taip, kad jis atspindėtų jaučiamą harmoninę įtampą originalioje kūrinio ištraukoje.</p>
     <audio id="mainAudio" controls>
       <source src="music.mp3" type="audio/mpeg">
     </audio>
@@ -193,12 +218,7 @@
       <input type="range" id="mainSlider" class="form-range" min="0" max="1" step="0.01" value=0>
     </div>
     <div class="mt-4">
-      <label for="heardBefore" class="form-label">Ar esate girdėję/-usi šį kūrinį anksčiau?</label>
-      <select id="heardBefore" class="form-select" required>
-        <option value="">--Pasirinkite variantą.--</option>
-        <option value="yes">Taip</option>
-        <option value="no">Ne</option>
-      </select>
+      <!-- PLACEHOLDER -->
     </div>
     <div class="button-group">
       <button id="finishButton" class="btn btn-primary">Baigti</button>
@@ -208,8 +228,8 @@
 
   <!-- STAGE 5: Second Test -->
 <div id="stage5" class="hidden">
-  <h2>Antrasis testas</h2>
-  <p>Klausykitės ir reguliuokite slankiklį pagal muzikinę įtampą.</p>
+  <h2>Pagrindinis testas</h2>
+  <p>Atidžiai klausykitės ir reguliuokite slankiklį taip, kad jis atspindėtų jaučiamą harmoninę įtampą harmoniškai redukuotoje kūrinio ištraukoje (aiškiai gridimi akordai).</p>
   <audio id="secondaryAudio" controls>
     <source src="music.mp3" type="audio/mpeg">
   </audio>
@@ -221,12 +241,7 @@
     <input type="range" id="secondarySlider" class="form-range" min="0" max="1" step="0.01" value="0">
   </div>
   <div class="mt-4">
-    <label for="heardBefore2" class="form-label">Ar esate girdėję/-usi šį antrąjį kūrinį anksčiau?</label>
-    <select id="heardBefore2" class="form-select" required>
-      <option value="">--Pasirinkite variantą.--</option>
-      <option value="yes">Taip</option>
-      <option value="no">Ne</option>
-    </select>
+    <!-- PLACEHOLDER -->
   </div>
   <div class="button-group">
     <button id="finishSecondaryButton" class="btn btn-primary">Baigti</button>
@@ -510,8 +525,6 @@ $("#downloadCSVWindows").click(() => {
         }
     });
 });
-
-
 
 
 // Mac CSV: UTF-8 BOM + Comma
