--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
     <h4>Aprašymas</h4>
 <p>Sveiki,</p>
 <p>
-  esu Aušrinė Butvydaitė, muzikos tyrimų bakalauro trečio kurso studentė Lietuvos muzikos ir teatro akademijoje. Šiuo metu rašau kursinį darbą „Harmoninės įtampos fenomenas: sąvokos kontūrai skirtinguose teoriniuose modeliuose“ ir atlieku akustinį eksperimentą. Jo tikslas – išsiaiškinti kaip klausytojai suvokia įtampą pateiktoje muzikinio kūrinio ištraukoje (muzikinės ištraukos trukmė 1 min.). Prieš tai bus pateiktas bandomasis testas.
+  esu Aušrinė Butvydaitė, muzikos tyrimų bakalauro ketvirto kurso studentė Lietuvos muzikos ir teatro akademijoje. Šiuo metu rašau kursinį darbą „Harmoninės įtampos fenomenas: sąvokos kontūrai skirtinguose teoriniuose modeliuose“ ir atlieku akustinį eksperimentą. Jo tikslas – išsiaiškinti kaip klausytojai suvokia įtampą pateiktoje muzikinio kūrinio ištraukoje (muzikinės ištraukos trukmė 1 min.). Prieš tai bus pateiktas bandomasis testas.
 </p>
 <p>
   Harmoninės įtampos terminas reiškia, jog akordai, kurie skamba maloniai ir darniai, turi
@@ -228,8 +228,8 @@ Ačiū už Jūsų laiką!
 
   <!-- STAGE 5: Second Test -->
 <div id="stage5" class="hidden">
-  <h2>Pagrindinis testas</h2>
-  <p>Atidžiai klausykitės ir reguliuokite slankiklį taip, kad jis atspindėtų jaučiamą harmoninę įtampą harmoniškai redukuotoje kūrinio ištraukoje (aiškiai gridimi akordai).</p>
+  <h2>Pagrindinis testas (harmoniškai redukuota kūrinio ištrauka)</h2>
+  <p>Atidžiai klausykitės ir reguliuokite slankiklį taip, kad jis atspindėtų jaučiamą harmoninę įtampą harmoniškai redukuotoje kūrinio ištraukoje (aiškiai girdimi akordai).</p>
   <audio id="secondaryAudio" controls>
     <source src="music.mp3" type="audio/mpeg">
   </audio>
